syntax = "proto3";
import "google/protobuf/any.proto";
package tutorial;

option java_multiple_files = true;
option java_package = "proto";
option java_outer_classname = "MessageOuterClass";

message Message {
  int32 id = 1;
  string dest =2;
  MessageType messageType = 3;
  google.protobuf.Any  messagePayload = 4;


}
enum MessageType {
  REQUEST_PASTE_TEXT = 0;
  REQUEST_PASTE_IMAGE = 1;
  REQUEST_COPY_SS = 2;
  RESPONSE_PASTE_TEXT = 3;
  RESPONSE_PASTE_IMAGE = 4;
  RESPONSE_COPY_SS = 5;
  UPDATE_JOIN =6;
  UPDATE_CLIENT = 7;
}

message JoinPayload {
  int64 timestamp = 1;
  int32 id = 2;
  string deviceType = 3;
  string name = 4;
  repeated string clipboard = 5;
}
message TextPayload {
  string text = 1;
}
message ResponsePayload {
  string status = 1;
}